--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,7 @@
 <project name="spiralcraft-sql" default="build" basedir=".">
 
-
+  <property name="classpath" value="${spiralcraft-core.jar}:${spiralcraft-data.jar}"/>
+  
   <target name="build">
     <javac 
       srcdir="source" 
@@ -21,4 +22,25 @@
     </jar>
   </target>
 
+  <target name="doc" depends="build">
+		<javadoc 
+      classpath="source:${classpath}"
+			sourcepath="source"
+      packagenames="spiralcraft.**.**"
+        
+			header="spiralcraft-sql API"
+			destdir="docs/api"
+			author="Spiralcraft, Inc."
+			version="v1.0-dev0"
+			use="true"
+			windowtitle="spiralcraft-sql API"
+			doctitle="&lt;h1&gt;spiralcraft-sql API&lt;/h1&gt;"
+			maxmemory="90M"
+			failonerror="true"
+      >
+			<bottom>Copyright 2000,2004 Michael Toth and Spiralcraft, Inc.</bottom>
+      <link offline="true" href="../../spiralcraft-core/api"  packagelistLoc="${spiralcraft-core}/docs/api"/>
+      <link offline="true" href="../../spiralcraft-data/api"  packagelistLoc="${spiralcraft-data}/docs/api"/>
+		</javadoc>
+  </target>
 </project>
