--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <project name="spiralcraft-sql" default="build" basedir=".">
 
   <property name="module" value="sql"/>
-  <property name="version" value="1.0"/>
+  <property name="version" value="1.0pre1"/>
   <property name="classpath" value="${spiralcraft-core.jar}:${spiralcraft-data.jar}"/>
   <property name="manifest.class.path" value="spiralcraft-core.jar spiralcraft-data.jar"/>
 
