--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="source"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="var" path="SPIRALCRAFT_HOME/lib/spiralcraft-core.jar"/>
+	<classpathentry kind="lib" path="lib/spiralcraft-core.jar"/>
 	<classpathentry kind="output" path="source"/>
 </classpath>
