--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,5 @@
 	<classpathentry kind="src" path="source"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/spiralcraft-core.jar"/>
-	<classpathentry kind="output" path="out"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
