--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="source"/>
 	<classpathentry kind="src" path="test-source"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/spiralcraft-core-test.jar"/>
 	<classpathentry kind="lib" path="lib/spiralcraft-core.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
