--- a/build.xml
+++ b/build.xml
@@ -1,8 +1,8 @@
 <project name="spiralcraft-sql" default="build" basedir=".">
 
   <property name="module" value="sql"/>
-  <property name="version" value="1.0pre1"/>
-  <property name="classpath" value="lib/spiralcraft-core.jar"/>
+  <property name="version" value="0.3.1"/>
+  <property name="classpath" value="lib/spiralcraft-core.jar;lib/spiralcraft-core-test.jar"/>
   <property name="manifest.class.path" value="spiralcraft-core.jar"/>
 
   <import file="../../build/build-spiralcraft-common.xml"/>
