--- a/ivy.xml
+++ b/ivy.xml
@@ -3,10 +3,7 @@
   <info organisation="spiralcraft" module="sql">
   </info>
   <dependencies>
-    <dependency
-      org="spiralcraft" 
-      name="core" 
-      rev="latest.integration"
-    />
+    <dependency org="spiralcraft" name="core" rev="latest.integration"/>
+    <dependency org="postgresql" name="jdbc4" rev="latest.integration"/>
   </dependencies>
 </ivy-module>
