--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <project name="spiralcraft-sql" default="build" basedir=".">
 
   <property name="module" value="sql"/>
-  <property name="version" value="0.3.1"/>
+  <property name="buildVersion" value="0.4.4.3"/>
   <property name="classpath" value="lib/spiralcraft-core.jar;lib/spiralcraft-core-test.jar"/>
   <property name="manifest.class.path" value="spiralcraft-core.jar"/>
 
