--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="src" path="test-source"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/spiralcraft-core-test.jar"/>
-	<classpathentry kind="lib" path="lib/spiralcraft-core.jar"/>
+	<classpathentry kind="lib" path="lib/spiralcraft-core.jar" sourcepath="/spiralcraft-modules-core"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/spiralcraft-modules-core"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
