--- a/ivy.xml
+++ b/ivy.xml
@@ -7,7 +7,8 @@
     <artifact name="spiralcraft-sql-test" type="jar" ext="jar"/>
   </publications> 
   <dependencies>
-    <dependency org="spiralcraft" name="core" rev="[0.4.11,)"/>
+    <dependency org="spiralcraft" name="distrib-common" rev="[0.4.17-dev1,0.5-dev["/>
+    <dependency org="hsqldb" name="hsqldb" rev="[2.2.8,)"/>
     <dependency org="postgresql" name="jdbc4" rev="latest.integration"/>
   </dependencies>
 </ivy-module>
