--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/spiralcraft-core-test.jar"/>
 	<classpathentry kind="lib" path="lib/spiralcraft-core.jar" sourcepath="/spiralcraft-modules-core"/>
+	<classpathentry kind="lib" path="lib/spiralcraft-json.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
